--- a/.github/workflows/ci-linux-emulation.yml
+++ b/.github/workflows/ci-linux-emulation.yml
@@ -30,24 +30,25 @@ jobs:
         name: [iperf3]
         os_id: [alpine]
         os_version_id: [edge]
-        arch: [amd64, arm32v6, arm32v7, arm64v8, i386, ppc64le, riscv64, s390x]
+        arch: [amd64, arm64v8]
+        # arch: [amd64, arm32v6, arm32v7, arm64v8, i386, ppc64le, riscv64, s390x]
         include:
           - arch: amd64
             platform: linux/amd64
-          - arch: arm32v6
-            platform: linux/arm/v6
-          - arch: arm32v7
-            platform: linux/arm/v7
+          # - arch: arm32v6
+          #   platform: linux/arm/v6
+          # - arch: arm32v7
+          #   platform: linux/arm/v7
           - arch: arm64v8
             platform: linux/arm64
-          - arch: i386
-            platform: linux/i386
-          - arch: ppc64le
-            platform: linux/ppc64le
-          - arch: riscv64
-            platform: linux/riscv64
-          - arch: s390x
-            platform: linux/s390x
+          # - arch: i386
+          #   platform: linux/i386
+          # - arch: ppc64le
+          #   platform: linux/ppc64le
+          # - arch: riscv64
+          #   platform: linux/riscv64
+          # - arch: s390x
+          #   platform: linux/s390x
 
     name: ${{ matrix.name }} ${{ matrix.os_id }}:${{ matrix.os_version_id }} ${{ matrix.arch }}
 
@@ -78,6 +79,7 @@ jobs:
             custom_docker_commands: |
               -e CPPFLAGS=-I${wd}/local/include -I/usr/include/fortify -U_FORTIFY_SOURCE -D_FORTIFY_SOURCE=3
               -e LDFLAGS=-static --static -L${wd}/local/lib -Wl,-O1,--as-needed,--sort-common,-z,nodlopen,-z,noexecstack,-z,now,-z,relro,-z,--no-copy-dt-needed-entries,--build-id
+              -e CFLAGS=-O2 -s
 
       - name: Git clone ${{ matrix.name }}
         run: docker exec "${container_name}" git clone --no-tags --single-branch --branch "${source_branch}" --shallow-submodules --recurse-submodules -j"$(nproc)" --depth 1 "${source_repo}" "${wd}/${{ matrix.name }}"
